<resources>
    <string name="app_name">OU3</string>

    <string name="action_profile">Profile</string>
    <string name="action_filter">Filter</string>
    <string name="action_importList">Import CSV file</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="placeholder_pass">asdefgh12345</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>

    <string name="register_user">Register User</string>
    <string name="movie_button">Find movie</string>
    <string name="csv_button">Import CSV</string>
    <string name="pos_button">Get movie from my country</string>
    <string name="reg_button">Register</string>
    <string name="welcome_text">MOVIEPICKER</string>
    <string name="import_list">IMPORT LIST</string>
    <string name="genre_text">Genre</string>
    <string name="start_image_desc">Picture from "Gone with the wind" with Vivien Leigh and Hattie McDaniels</string>

    <string name="filter_year">Year</string>
    <string name="filter_genre">Genre</string>
    <string name="filter_country">Country</string>
    <string name="filter_acceptButton">Accept</string>

    <!-- Genres for filter -->
    <string-array name="genres">
        <item>All</item>
        <item>Drama</item>
        <item>Comedy</item>
        <item>Sci-Fi</item>
        <item>Action</item>
        <item>War</item>
        <item>Surreal</item>
        <item>Musical</item>
        <item>Classic</item>
    </string-array>

    <!-- Countries for filter -->
    <string-array name="countries">
        <item>All</item>
        <item>Sweden</item>
        <item>USA</item>
        <item>France</item>
        <item>Japan</item>
        <item>Russia</item>
        <item>UK</item>
    </string-array>


</resources>